# TinyScaler

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  ffi_build.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug.md  proposal.md
.github/workflows/: build-publish.yml  pre-commit.yml
examples/: benchmark.py  benchmark_area.py  benchmark_bilinear.py
scaler/: scaler.py
src/: scaler.c  scaler.h  tinyscaler.c  tinyscaler.pyx
tinyscaler/: __init__.py  scaler.py
